Created password recovery page, include blocks. Improved HTML and CSS
1. Add change in admin. Improved classes fields. Add new classes for Hard skills include block.
2. Add change in models. Improved classes fields. Add Meta classes. Add new classes for Hard skills include block.
3. Renamed images for erros pages.
4. Change page data for nav selected.
5. Add new Allowed Hosts.

--- a/PyTime_Project/core/templates/agreements/user_agreement.html
+++ b/PyTime_Project/core/templates/agreements/user_agreement.html
@@ -7,8 +7,8 @@
 
 {% block main-container %}
     <div class="main_content">
-        <div class="agreement_title_block d-flex justify-content-center">
-            <h2 class="agremeent_title">
+        <div class="agreement_container d-flex justify-content-center">
+            <h2 class="agremeent_title mb-0">
                 Пользовательское соглашение
             </h2>
         </div>
@@ -38,6 +38,7 @@
             </p>
 
 
+
             <p class="agreement_chapter">
                 2. ОПРЕДЕЛЕНИЯ
             </p>
@@ -57,6 +58,7 @@
             <p class="agreement_point_2 mb-0">
                 2.1.4. Содержание сайта Интернет-ресурса (далее – Содержание) - охраняемые результаты интеллектуальной деятельности, пользовательские интерфейсы, визуальные интерфейсы, названия товарных знаков, логотипы, программы для ЭВМ, базы данных, а также дизайн, структура, выбор, координация, внешний вид, общий стиль и расположение данного Содержания, входящего в состав Сайта и другие объекты интеллектуальной собственности все вместе и (или) по отдельности, содержащиеся на сайте Интернет-ресурса.
             </p>
+
 
 
             <p class="agreement_chapter">
@@ -90,6 +92,7 @@
             <p class="agreement_point_1 mb-0">
                 3.4. Использование материалов и сервисов Сайта регулируется нормами действующего законодательства Российской Федерации.
             </p>
+
 
 
             <p class="agreement_chapter">
@@ -215,6 +218,7 @@
             </p>
 
 
+
             <p class="agreement_chapter">
                 5. ИСПОЛЬЗОВАНИЕ САЙТА
             </p>
@@ -248,6 +252,7 @@
             </p>
 
 
+
             <p class="agreement_chapter">
                 6. ОТВЕТСТВЕННОСТЬ
             </p>
@@ -272,6 +277,7 @@
             </p>
 
 
+
             <p class="agreement_chapter">
                 7. НАРУШЕНИЕ УСЛОВИЙ ПОЛЬЗОВАТЕЛЬСКОГО СОГЛАШЕНИЯ
             </p>
@@ -293,6 +299,7 @@
             </p>
 
 
+
             <p class="agreement_chapter">
                 8. РАЗРЕШЕНИЕ СПОРОВ
             </p>
@@ -309,6 +316,7 @@
             <p class="agreement_point_1 mb-0">
                 8.4. Любой иск в отношении условий использования Сайта должен быть предъявлен в течение срока после возникновения оснований для иска, за исключением защиты авторских прав на охраняемые в соответствии с законодательством материалы Сайта. При нарушении условий данного пункта любой иск или основания для иска погашаются исковой давностью.
             </p>
+
 
 
             <p class="agreement_chapter">
