--- a/PyTime_Project/core/templates/articles/check_last_articles.html
+++ b/PyTime_Project/core/templates/articles/check_last_articles.html
@@ -1,13 +1,13 @@
-<div class="preview_projects_up_side d-flex flex-column align-items-center justify-content-center">
-    <p class="preview_last_project_short_block_name mb-0">
+<div class="contaner_up_side text-center d-flex flex-column align-items-center justify-content-center">
+    <p class="one_word_description">
         Статьи
     </p>
 
-    <h2 class="explore_my_projects_title">
+    <h2 class="container_title">
     	Ознакомьтесь с последними новостями
     </h2>
 
-    <p class="explore_my_projects_text mb-0">
+    <p class="container_text mb-0">
     	Откройте для себя советы, учебные пособия и тенденции отрасли в области Python
     </p>
 </div>
