--- a/PyTime_Project/core/templates/errors/section_is_empty.html
+++ b/PyTime_Project/core/templates/errors/section_is_empty.html
@@ -1,5 +1,5 @@
-<div class="selection_empty d-flex justify-content-center">
-    <p class="selection_empty_text mb-0 text-center w-50">
+<div class="section_empty_container d-flex justify-content-center">
+    <p class="container_text mb-0 text-center w-75">
         На данный момент <b><u>раздел</u></b> находится <b><u>в процессе наполнения</u></b>. Я активно работаю над созданием полезных материалов о Python-разработке.
         
         <br><br>
