--- a/PyTime_Project/core/templates/agreements/privacy.html
+++ b/PyTime_Project/core/templates/agreements/privacy.html
@@ -7,8 +7,8 @@
 
 {% block main-container %}
 <div class="main_content">
-        <div class="agreement_title_block d-flex justify-content-center">
-            <h2 class="agremeent_title">
+        <div class="agreement_container d-flex justify-content-center">
+            <h2 class="agremeent_title mb-0">
                 Политика конфиденциальности
             </h2>
         </div>
@@ -28,6 +28,7 @@
             <p class="agreement_point_1 mb-0">
                 1.2. Настоящая политика Оператора в отношении обработки персональных данных (далее — Политика) применяется ко всей информации, которую Оператор может получить о посетителях веб-сайта https://pytime.ru.
             </p>
+
 
 
             <p class="agreement_chapter">
@@ -78,6 +79,7 @@
             </p>
 
 
+
             <p class="agreement_chapter">
                 3. Основные права и обязанности Оператора
             </p>
@@ -124,6 +126,7 @@
 
 
 
+
             <p class="agreement_chapter">
                 4. Основные права и обязанности субъектов персональных данных
             </p>
@@ -163,6 +166,7 @@
             </p>
 
 
+
             <p class="agreement_chapter">
                 5. Принципы обработки персональных данных
             </p>
@@ -188,6 +192,7 @@
             <p class="agreement_point_1 mb-0">
                 5.7. Хранение персональных данных осуществляется в форме, позволяющей определить субъекта персональных данных, не дольше, чем этого требуют цели обработки персональных данных, если срок хранения персональных данных не установлен федеральным законом, договором, стороной которого, выгодоприобретателем или поручителем по которому является субъект персональных данных. Обрабатываемые персональные данные уничтожаются либо обезличиваются по достижении целей обработки или в случае утраты необходимости в достижении этих целей, если иное не предусмотрено федеральным законом.
             </p>
+
 
 
             <p class="agreement_chapter">
@@ -232,6 +237,7 @@
             </table>
 
 
+
             <p class="agreement_chapter">
                 7. Общие положения
             </p>
@@ -257,6 +263,7 @@
             <p class="agreement_point_1 mb-0">
                 7.7. Осуществляется обработка персональных данных, подлежащих опубликованию или обязательному раскрытию в соответствии с федеральным законом.
             </p>
+
 
 
             <p class="agreement_chapter">
@@ -298,6 +305,7 @@
             </p>
 
 
+
             <p class="agreement_chapter">
                 9. Перечень действий, производимых Оператором с полученными персональными данными
             </p>
@@ -308,6 +316,7 @@
             <p class="agreement_point_1 mb-0">
                 9.2. Оператор осуществляет автоматизированную обработку персональных данных с получением и/или передачей полученной информации по информационно-телекоммуникационным сетям или без таковой.
             </p>
+
 
 
             <p class="agreement_chapter">
@@ -322,6 +331,7 @@
             </p>
 
 
+
             <p class="agreement_chapter">
                 11. Конфиденциальность персональных данных
             </p>
@@ -329,6 +339,7 @@
             <p class="agreement_text mb-0">
                 Оператор и иные лица, получившие доступ к персональным данным, обязаны не раскрывать третьим лицам и не распространять персональные данные без согласия субъекта персональных данных, если иное не предусмотрено федеральным законом.
             </p>
+
 
 
             <p class="agreement_chapter">
