--- a/PyTime_Project/core/templates/articles/article_card.html
+++ b/PyTime_Project/core/templates/articles/article_card.html
@@ -6,7 +6,7 @@
             {% if article.image %}
                 <img src="{{ article.image.url }}" class="article_card_img">
             {% else %}
-                <img src="{% static 'img/404_IMG.png' %}" class="article_card_img">
+                <img src="{% static 'img\errors\imageNotFound.png' %}" class="article_card_img">
             {% endif %}
         </div>
 
@@ -20,10 +20,10 @@
             </p>
 
             <!-- Tags -->
-            {% include 'include/item_tags.html' with itemData=article %}
+            {% include 'include/item_tags.html' with itemData=article getAllTags=False %}
         </div>
 
-        <div class="article_card_view_block mt-auto d-flex justify-content-between">
+        <div class="article_card_view_block h-100 d-flex justify-content-between align-items-end">
             <a href="{{ article.get_absolute_url }}" class="article_card_view_link">
                 Читать ❯
             </a>
@@ -31,6 +31,16 @@
             <p class="article_card_datetime_published mb-0">
                 {{ article.datetimeCreate }}
             </p>
+        </div>
+
+        <div class="article_card_view_block_tablet h-100 d-flex flex-column justify-content-end">
+            <p class="article_card_datetime_published mb-0">
+                {{ article.datetimeCreate }}
+            </p>
+
+            <a href="{{ article.get_absolute_url }}" class="article_card_view_link">
+                Читать ❯
+            </a>
         </div>
     </div>
 {% endfor %}
