--- a/PyTime_Project/core/templates/authentication/authorization.html
+++ b/PyTime_Project/core/templates/authentication/authorization.html
@@ -7,50 +7,49 @@
 
 {% block main-container %}
 	<div class="main_content">
-		<div class="authentication_content d-flex align-items-center justify-content-center">
+		<div class="authentication_container d-flex align-items-center justify-content-center">
 			<div class="authentication_block">
-				<p class="authentication_title">
+				<p class="container_title">
 					Авторизация
 				</p>
 				
 				<form action="#" class="authentication_form_block">
-					<div class="authentication_input_block">
-						<p class="authentication_input_title">
-							Почта
+					<p class="container_form_title">
+						Почта
+					</p>
+						
+					<input required type="email" placeholder="Введите почту" class="container_form_input w-100">
+
+					<div class="container_form_text_block d-flex justify-content-between">
+						<p class="container_form_title mb-0">
+							Пароль
 						</p>
-						<input required type="email" placeholder="Введите почту" class="authentication_input">
+
+						<a href="{% url 'passwordResetEnterMail' %}" class="container_link">
+							Забыли пароль?
+						</a>
 					</div>
 
-					<div class="authentication_input_block">
-						<div class="authentication_input_text_block d-flex justify-content-between">
-							<p class="authentication_input_title mb-0">
-								Пароль
-							</p>
-
-							<a href="{% url 'passwordResetEnterMail' %}" class="authentication_link">
-								Забыли пароль?
-							</a>
-						</div>
-
-						<input required type="password" placeholder="Введите пароль" class="authentication_input">
-					</div>
+					<input required type="password" placeholder="Введите пароль" class="container_form_input w-100">
 
 					<!-- Кнопка авторизации -->
 					<div class="authentication_button_block d-flex justify-content-center">
-						<!-- {% url "articlesPage" as articlesUrl %} -->
-		                {% include "buttons/button_black_background.html" with name="Войти" %}
+						{% url "serviceUnavailable" as serviceUnavailableUrl %}
+
+		                {% include "buttons/button_black_background.html" with name="Войти" url_name=serviceUnavailableUrl %}
 					</div>
 				</form>
 
-				<hr class="authentication_line">
+				<hr class="base_content_separator mx-0">
 
-				<div class="authentication_create_account_block d-flex justify-content-between align-items-center">
-					<p class="authentication_text mb-0">
+				<div class="container_create_account d-flex justify-content-between align-items-center">
+					<p class="container_text mb-0">
 						У Вас ещё нет аккаунта?
 					</p>
 
 					<!-- Кнопка регистрации -->
 					{% url "registrationUser" as registrationUserURL %}
+					
 					{% include "buttons/button_white_background.html" with name="Регистрация" url_name=registrationUserURL %}
 				</div>
 			</div>
