--- a/PyTime_Project/core/templates/include/explore_my_work/expole_my_projects.html
+++ b/PyTime_Project/core/templates/include/explore_my_work/expole_my_projects.html
@@ -1,17 +1,40 @@
-<div class="explore_my_projects d-flex justify-content-between align-items-center">
-	<div class="explore_my_projects_left_side">
-		<h2 class="explore_my_projects_left_side_title m-0">
+<div class="short_content_container d-flex justify-content-between align-items-center align-content-center">
+	<div class="container_left_side">
+		<h2 class="container_title mb-0">
 			Исследуйте мои проекты
 		</h2>
 	</div>
 
-	<div class="explore_my_projects_right_side">
-		<p class="explore_my_projects_right_side_text">
+	<div class="container_right_side">
+		<p class="container_text">
 			Мои проекты отличаются высоким уровнем профессионализма и качества. Я тщательно подхожу к каждому аспекту работы, обеспечивая отличные результаты. Благодаря этому, они выделяются среди других, привнося новизну и эффективность в каждую задачу.
 		</p>
 
 		<!-- Buttons -->
-		<div class="block_duo_buttons d-flex justify-content-between">
+		<div class="block_buttons d-flex justify-content-between">
+            {% url "projectsPage" as projectsUrl %}
+
+            {% include "buttons/button_white_background.html" with name="Узнать больше" url_name=projectsUrl %}
+		</div>
+	</div>
+</div>
+
+
+<!-- Tablet/mobile version -->
+<div class="short_content_container_tablet d-flex flex-column text-center align-items-center align-content-center">
+	<div class="container_up_side">
+		<h2 class="container_title">
+			Исследуйте мои проекты
+		</h2>
+
+		<p class="container_text">
+			Мои проекты отличаются высоким уровнем профессионализма и качества. Я тщательно подхожу к каждому аспекту работы, обеспечивая отличные результаты. Благодаря этому, они выделяются среди других, привнося новизну и эффективность в каждую задачу.
+		</p>
+	</div>
+
+	<div class="container_bottom_side">
+		<!-- Buttons -->
+		<div class="block_buttons d-flex justify-content-between">
             {% url "projectsPage" as projectsUrl %}
 
             {% include "buttons/button_white_background.html" with name="Узнать больше" url_name=projectsUrl %}
