--- a/PyTime_Project/core/templates/include/hard_skills.html
+++ b/PyTime_Project/core/templates/include/hard_skills.html
@@ -1,23 +1,13 @@
-<ul class="main_skills_left_side_skills mb-0">
-    <li class="main_skills_left_side_skills_item">
-        Python 3.8+
-    </li>
-    <li class="main_skills_left_side_skills_item">
-        Фреймворк: Django 3+
-    </li>
-    <li class="main_skills_left_side_skills_item">
-        СУБД: MySQL, PostgreSQL, SQLite, MongoDB, SQL Server
-    </li>
-    <li class="main_skills_left_side_skills_item">
-        ORM: Django ORM, SQL Alchemy
-    </li>
-    <li class="main_skills_left_side_skills_item">
-        Библиотеки: asyncio, pytest, typing, pandas, numpy, bs4 и другие
-    </li>
-    <li class="main_skills_left_side_skills_item">
-        Базовые знания: HTML5, CSS3, JS, C++
-    </li>
-    <li class="main_skills_left_side_skills_item">
-        Другое: Git, Docker, Redis, Celery, Bootstrap
-    </li>
+<ul class="container_hard_skills mb-0">
+    {% for skillCategory in skillsCategoryData %}
+        {% if forloop.last %}
+            <li class="hard_skills_item mb-0">
+                {{ skillCategory }}: {{ skillCategory.getSkills }}
+            </li>
+        {% else %}
+            <li class="hard_skills_item">
+                {{ skillCategory }}: {{ skillCategory.getSkills }}
+            </li>
+        {% endif %}
+    {% endfor %}
 </ul>
