--- a/PyTime_Project/core/templates/projects/projects.html
+++ b/PyTime_Project/core/templates/projects/projects.html
@@ -9,12 +9,12 @@
 	<div class="main_content">
 		<!-- Preview 4 last projects -->
 		<div class="preview_projects">
-			{% include 'include/check_last_projects.html' %}
+			{% include 'projects/check_last_projects.html' %}
 			
             {% if lastProjects|length != 0 %}
-                <div class="preview_projects_bottom_side">
-                    <div class="preview_projects_line d-flex justify-content-between">
-    					{% include 'include/cards/project_card.html' with projects=lastProjects %}
+                <div class="contaner_bottom_side">
+                    <div class="preview_projects_line d-flex justify-content-center">
+    					{% include 'projects/project_card.html' with projects=lastProjects %}
     				</div>
 
                     <div class="view_all_projects d-flex justify-content-center">
@@ -33,17 +33,17 @@
 
 		<!-- Preview last project -->
         {% if lastProject is not None %}
-    		<div class="preview_last_project d-flex justify-content-between align-items-center">
-                <div class="preview_last_project_left_side d-flex flex-column justify-content-center">
-                    <p class="preview_last_project_short_block_name mb-0">
+    		<div class="content_container d-flex justify-content-between align-items-center">
+                <div class="container_left_side">
+                    <p class="one_word_description">
                         Последняя разработка
                     </p>
                     
-                    <h2 class="preview_last_project_title">
+                    <h2 class="container_text">
                         {{ lastProject.title }}
                     </h2>
                     
-                    <p class="preview_last_project_text">
+                    <p class="container_text">
                         {{ lastProject.text|truncatechars:800 }}
                     </p>
 
@@ -51,16 +51,55 @@
                     {% include "buttons/button_black_background.html" with name="Узнать больше" url_name=lastProject.get_absolute_url %}
                 </div>
 
-                <!-- Img block -->
-                <div class="preview_last_project_right_side">
+                {% if lastProject.image %}
+                    <img src="{{ lastProject.image.url }}" class="container_image">
+                {% else %}
+                    <img src="{% static 'img\errors\imageNotFound.png' %}" class="container_image">
+                {% endif %}
+    		</div>
+            
+            <!-- Preview last project. Tablet/mobile version -->
+            <div class="content_container_tablet d-flex flex-column justify-content-center">
+                <div class="container_up_side text-center">
+                    <p class="one_word_description">
+                        Последняя разработка
+                    </p>
+                    
+                    <h2 class="container_text">
+                        {{ lastProject.title }}
+                    </h2>
+                </div>
+
+                <div class="container_bottom_side d-flex justify-content-between align-items-center">
+                    <div class="container_left_side">
+                        <p class="container_text mb-0 text-center">
+                            {{ lastProject.text|truncatechars:800 }}
+                        </p>
+                    </div>
+
                     {% if lastProject.image %}
-                        <img src="{{ lastProject.image.url }}" class="preview_last_project_card_img">
+                        <img src="{{ lastProject.image.url }}" class="container_image">
                     {% else %}
-                        <img src="{% static 'img/404_IMG.png' %}" class="preview_last_project_card_img">
+                        <img src="{% static 'img\errors\imageNotFound.png' %}" class="container_image">
                     {% endif %}
                 </div>
-    		</div>
-        
+                
+                {% if lastProject.image %}
+                    <div class="block_image_tablet mb-0 d-flex justify-content-center">
+                        <img class="container_image_tablet" src="{{ lastProject.image.url }}">
+                    </div>
+                {% else %}
+                    <div class="block_image_tablet mb-0 d-flex justify-content-center">
+                        <img class="container_image_tablet" src="{% static 'img\errors\imageNotFound.png' %}">
+                    </div>
+                {% endif %}
+
+                <!-- Button -->
+                <div class="block_buttons mt-4 d-flex justify-content-evenly w-100">
+                    {% include "buttons/button_black_background.html" with name="Узнать больше" url_name=lastProject.get_absolute_url %}
+                </div>
+            </div>
+
             <!-- Separator line -->
             <hr class="content_separator">
         {% endif %}
